<resources>
    <string name="app_name">YiCaiJiaoYu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="not_login">未登录</string>
    <string name="one_button_sign_in">一键签到</string>
    <string name="all_courses">全部课程</string>
    <string name="my_courses">我的课程</string>
    <string name="sign_up_online">在线报名</string>
    <string name="my_setting">我的设置</string>
    <string name="signed_uped">签到成功</string>
    <string name="not_free">付费观看</string>
    <string name="for_free">免费试听</string>
    <string name="category">科目:</string>
    <string name="lecture">讲师:</string>
    <string name="load">加载中</string>
    <string name="video_for_fee">收费视频</string>
    <string name="video_for_free">免费视频</string>
    <string name="loading_more">正在加载更多的数据</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="course_intro">课程简介:</string>
    <string name="all_video">全部视频</string>
    <string name="for_job">会计从业</string>
    <string name="for_primary">会计初级</string>
    <string name="for_intermediate">会计中级</string>
    <string name="just_now">刚刚</string>
    <string name="minute_ago">分钟前</string>
    <string name="cat">分类</string>
    <string name="logout">退出登录</string>
    <string name="advise">意见反馈</string>
    <string name="clean">清除缓存</string>
    <string name="hint1">邮箱/手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_phone_number">输入手机号码</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="quick_register">手机快速注册</string>
    <string name="hint3">输入手机验证码</string>
    <string name="hint4">请输入手机号码</string>
    <string name="wrong_num">手机号码错误</string>
    <string name="hint5">请求成功，待会讲收到验证码短信</string>
    <string name="hint6">短信请求失败</string>
    <string name="resend">秒后重新发送</string>
    <string name="resend_no_time">重新发送</string>
    <string name="hint7">输入密码</string>
    <string name="hint8">再次输入密码</string>
    <string name="reset_password">重置密码</string>
    <string name="hint9">两次密码输入不一致</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="advises">意见反馈</string>
    <string name="hint10">说点什么吧</string>
    <string name="detail">详情</string>
    <string name="comments">评论</string>
    <string name="chapters">章节</string>
    <string name="care_for">关注</string>
    <string name="bought">已购</string>
    <string name="history">历史</string>
    <string name="login_directly">直接登录</string>
    <string name="maybe_later">稍后再说</string>
    <string name="hint11">没有更多的课程了</string>
    <string name="now_login">现在登录</string>
    <string name="exit_or_not">确定要退出程序吗</string>
    <string name="sure">确定</string>
    <string name="buy_or_not">您还没有购买该课程，要购买吗？</string>
    <string name="buy">购买</string>
    <string name="submit">提交</string>
    <string name="thank_your_advise">谢谢您的宝贵意见</string>
    <string name="no_network">没有网络哦，亲~</string>
    <string name="set_network">去设置网络</string>
    <string name="team">会计小组</string>
    <string name="download_hint">要边看边下载吗（并不会多用流量）?</string>
    <string name="certain">确定</string>
    <string name="no_rom">SD卡容量不够</string>
    <string name="off_line_videos">已离线的视频</string>
    <string name="clean_hint">将要清空该缓存，确定吗？</string>
    <string name="free_for_member">会员免费</string>
    <string name="card">学习卡免费</string>
</resources>
