<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/header"
        style="@style/black_header">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:src="@drawable/cha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:text="@string/input_phone_number"
            android:textColor="@color/pure_white"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/phone_num"
        android:hint="@string/hint4"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/pure_white"
        android:inputType="phone|number" />
    <TextView
        android:id="@+id/next"
        android:textSize="20sp"
        android:textColor="@color/pure_white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/green_button"
        android:layout_margin="20dp"
        android:text="@string/next"
        />
</LinearLayout>