<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/main_titlebar_background"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@drawable/fanhui"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/advises"
            android:textSize="20sp"
            android:textColor="@color/pure_white"

            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/submit"
            android:text="@string/submit"
            android:textSize="18sp"
            android:textColor="@color/pure_white"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <EditText
        android:hint="@string/hint10"
        android:padding="20dp"
        android:id="@+id/advise"
        android:ellipsize="none"
        android:maxLines="100"
        android:gravity="top"
        android:scrollHorizontally="false"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>