<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="140dp">

    <ImageView
        android:layout_margin="10dp"
        android:background="#000"
        android:layout_width="150dp"
        android:id="@+id/cover"
        android:layout_height="120dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_toRightOf="@+id/cover"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lecture"
                style="@style/course_item_text"
                />
            <TextView
                android:id="@+id/lecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/course_item_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                style="@style/course_item_text"
                />
            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/course_item_text"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/pure_white"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/not_free"
            android:background="@color/orange_background"
            android:layout_gravity="bottom"
            />
    </LinearLayout>
</RelativeLayout>